// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guide competency select renders component 1`] = `
<div
  className="competencySelect"
>
  <select
    className="mobileSelect"
    onChange={[Function]}
    value="157f0ecf-69e6-4007-a27c-d6f35de92565"
  >
    <option
      value="157f0ecf-69e6-4007-a27c-d6f35de92565"
    >
      Solving Problems
    </option>
    <option
      value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
    >
      Delivering Results
    </option>
    <option
      value="5064521c-1028-40d4-8baa-dfeff734406f"
    >
      Engaging with People
    </option>
    <option
      value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
    >
      Influencing People
    </option>
    <option
      value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
    >
      Managing Pressure
    </option>
  </select>
  <p
    className="mobileBadge"
  >
    <img
      alt="Solving Problems badge"
    />
  </p>
</div>
`;

exports[`Guide competency tab renders component 1`] = `
<li
  className={null}
>
  <button
    name="Delivering Results"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="Delivering Results badge"
    />
    <br />
    Delivering Results
  </button>
</li>
`;

exports[`Guide renders component 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tabActive"
      >
        <button
          name="Solving Problems"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Delivering Results"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Engaging with People"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Influencing People"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Managing Pressure"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <p>
          <em
            dangerouslySetInnerHTML={
              Object {
                "__html": "guide_get_started_html",
              }
            }
          />
        </p>
        <div>
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <p>
            Tell me how you would go about solving a work problem you have not encountered before.
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h3
            id={null}
          >
            Question 2
          </h3>
          <p>
            (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they working in a step-by-step manner?
              </li>
              <li>
                Is there a tension between this and wanting to try something new?
              </li>
              <li>
                Does this 'conflict' sometimes show itself in taking a very cautious approach?
              </li>
            </ul>
          </div>
          <div>
            <h4>
              question_adaptability
            </h4>
            <div>
              <ul>
                <li>
                  Do they recognize that sometimes the best approach is to use an existing procedure, or to be far less cautious and try something radically different?
                </li>
                <li>
                  Can they give an example of using either of these extremes?
                </li>
                <li>
                  What do they do to stop themselves getting stuck on the 'middle way' of doing things?
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div>
          <h3
            id={null}
          >
            Question 3
          </h3>
          <p>
            (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they sometimes not learn from the past?
              </li>
              <li>
                Do they move on too quickly without consolidating what they have learned?
              </li>
              <li>
                Do they sometimes override their experience because they think they need to demonstrate original thought?
              </li>
            </ul>
          </div>
          <div>
            <h4>
              question_adaptability
            </h4>
            <div>
              <ul>
                <li>
                  Do they know they sometimes confuse knowledge with foresight?
                </li>
                <li>
                  Can they provide an example of sticking with experience, and the tried-and-tested, even though they wanted to try something fresh?
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide renders nothing if guide not ready 1`] = `null`;

exports[`Guide renders nothing if no competencies 1`] = `null`;

exports[`Guide renders nothing if results not ready 1`] = `null`;

exports[`Guide toggles expanded intro 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tabActive"
      >
        <button
          name="Solving Problems"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Delivering Results"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Engaging with People"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Influencing People"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className={null}
      >
        <button
          name="Managing Pressure"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <p>
        The benefits of being open-minded are likely to include approaching problems in original ways, making quick connections, pushing boundaries, seeing the bigger picture, and not getting stuck in the detail.
In contrast someone who is pragmatic likes to solve problems in practical ways, and prefers tried-andtested solutions or established rules and regulations.
They are likely to have a fine eye for detail, be results oriented, and able to bring experience to bear on a problem.
Those who are a mixture of both (openminded/pragmatic) are best described as approaching problems in a systematic way, being able to flex between different options, capable of seeing situations at different levels of detail, and as bringing healthy caution to decision making.
These personality characteristics provide the basis for asking a particular sequence of questions of each of the personality 'types'.
The first question is looking to confirm what they should be like; the second two explore areas of possible concern.
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <p>
          <em
            dangerouslySetInnerHTML={
              Object {
                "__html": "guide_get_started_html",
              }
            }
          />
        </p>
        <div>
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <p>
            Tell me how you would go about solving a work problem you have not encountered before.
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h3
            id={null}
          >
            Question 2
          </h3>
          <p>
            (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they working in a step-by-step manner?
              </li>
              <li>
                Is there a tension between this and wanting to try something new?
              </li>
              <li>
                Does this 'conflict' sometimes show itself in taking a very cautious approach?
              </li>
            </ul>
          </div>
          <div>
            <h4>
              question_adaptability
            </h4>
            <div>
              <ul>
                <li>
                  Do they recognize that sometimes the best approach is to use an existing procedure, or to be far less cautious and try something radically different?
                </li>
                <li>
                  Can they give an example of using either of these extremes?
                </li>
                <li>
                  What do they do to stop themselves getting stuck on the 'middle way' of doing things?
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div>
          <h3
            id={null}
          >
            Question 3
          </h3>
          <p>
            (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
          </p>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they sometimes not learn from the past?
              </li>
              <li>
                Do they move on too quickly without consolidating what they have learned?
              </li>
              <li>
                Do they sometimes override their experience because they think they need to demonstrate original thought?
              </li>
            </ul>
          </div>
          <div>
            <h4>
              question_adaptability
            </h4>
            <div>
              <ul>
                <li>
                  Do they know they sometimes confuse knowledge with foresight?
                </li>
                <li>
                  Can they provide an example of sticking with experience, and the tried-and-tested, even though they wanted to try something fresh?
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
